--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,10 @@
     <dimen name="padding_horizontal_login">32dp</dimen>
     <dimen name="textsize_donthaveaccount">16dp</dimen>
     <dimen name="edittext_margin_createaccount">10dp</dimen>
+    <dimen name="height_cardview">200dp</dimen>
+    <dimen name="cornerradius_cardview">4dp</dimen>
+    <dimen name="textsize_username">25sp</dimen>
+    <dimen name="textsize_firstword_card">15sp</dimen>
+    <dimen name="timecard_marginleft_card">5dp</dimen>
+
 </resources>
