--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="textsize_username">25sp</dimen>
     <dimen name="textsize_firstword_card">15sp</dimen>
     <dimen name="timecard_marginleft_card">5dp</dimen>
+    <dimen name="height_bottombar">70dp</dimen>
 
 </resources>
