--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/login"
-                    android:theme="@style/RaisedButtonDark" />
+                    android:theme="@style/RaisedButtonDark"
+                    android:onClick="goHome"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
